# hubro-sdk

./: Cargo.toml  README.md
src/: fhir.rs  lib.rs  mobile.rs  plugin.rs  signals.rs  toolbox.rs
src/fed/: mod.rs
src/mobile/: records.rs
src/records/: mod.rs
templates/hubro-http-rust/content/: Cargo.toml.tmpl  spin.toml
templates/hubro-http-rust/content/src/: lib.rs
templates/hubro-http-rust/metadata/: spin-template.toml
