[package]
name = "hubro-sdk"
version = "0.8.6"
description = "Hubro Platform SDK crate"
license = "Apache-2.0"
edition = "2021"

[dependencies]
fhirbolt = { version = "0.4.0", features = ["r4b"] }
http = "0.2"
pkce = { version = "0.2.0", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.94"
chrono = "0.4.24"
spin-sdk = "2.2.0"
anyhow = "1.0.83"
bytes = "1.6.0"
wasm-bindgen = "0.2.92"
base64 = "0.22.1"
jwt-compact = "0.8.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
server = []
mobile = []
